@@ -1,31 +1,21 @@
 package com.smhrd.stock.config;
 
-import com.smhrd.stock.oauth.CustomOAuth2SuccessHandler;
-import com.smhrd.stock.oauth.CustomOAuth2UserService;
-import lombok.RequiredArgsConstructor;
+import java.util.Arrays;
+import java.util.List;
+
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.http.SessionCreationPolicy;
+// import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity; // 필요하면 추가
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
-import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
-import java.util.List;
-import jakarta.servlet.http.HttpServletResponse; // HttpServletResponse 임포트
-
 @Configuration
-@EnableWebSecurity
-@RequiredArgsConstructor
 public class SecurityConfig {
-
-    private final CustomOAuth2UserService customOAuth2UserService;
-    private final CustomOAuth2SuccessHandler customOAuth2SuccessHandler;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -37,17 +27,30 @@ public class SecurityConfig {
         CorsConfiguration config = new CorsConfiguration();
         config.setAllowedOrigins(List.of("http://localhost:3000")); // React 앱 주소
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*")); // 모든 헤더 허용 (필요에 따라 더 구체적으로 명시)
-        config.setAllowCredentials(true); // 중요: 쿠키(JSESSIONID)를 주고받기 위해 필수
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(true);
         
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
 
+    // 아래 빈 추가: 모든 요청 인증 없이 허용
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
+<<<<<<< Updated upstream
+<<<<<<< HEAD
+=======
+>>>>>>> Stashed changes
+            .cors() // CORS 설정 적용
+            .and()
+            .csrf().disable() // CSRF 비활성화 (API용이면 보통 비활성화)
+            .authorizeRequests()
+                .anyRequest().permitAll(); // 모든 요청 인증 없이 허용
+        
+<<<<<<< Updated upstream
+=======
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .csrf(csrf -> csrf.disable()) // API 통신 시 일반적으로 비활성화
             .authorizeHttpRequests(auth -> auth
@@ -140,6 +143,9 @@ public class SecurityConfig {
                 .successHandler(customOAuth2SuccessHandler)
             );
             
+>>>>>>> 10aa704be9be8087d2fb9404127f51f8bcfbe9d7
+=======
+>>>>>>> Stashed changes
         return http.build();
     }
 }
